--- a/backend/SupportPlatform.API/SupportPlatform.API.csproj
+++ b/backend/SupportPlatform.API/SupportPlatform.API.csproj
@@ -7,12 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.17" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SupportPlatform.Application\SupportPlatform.Application.csproj" />
+    <ProjectReference Include="..\SupportPlatform.Infrastructure\SupportPlatform.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
