--- a/backend/SupportPlatform.API/appsettings.json
+++ b/backend/SupportPlatform.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=support_db;Username=postgres;Password=chips123"
+  }
 }
