--- a/backend/SupportPlatform.Application/SupportPlatform.Application.csproj
+++ b/backend/SupportPlatform.Application/SupportPlatform.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\SupportPlatform.Domain\SupportPlatform.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
