--- a/backend/SupportPlatform.Infrastructure/SupportPlatform.Infrastructure.csproj
+++ b/backend/SupportPlatform.Infrastructure/SupportPlatform.Infrastructure.csproj
@@ -5,6 +5,13 @@
     <ProjectReference Include="..\SupportPlatform.Application\SupportPlatform.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
